overflow fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@ body{
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 html {
     scroll-behavior: smooth;
